--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
     <link rel="import" href="/src/form_login_tutorial-app/form_login_tutorial-app.html">
+    <link rel="import" href="/src/form_login_tutorial-app/form_button.html">
   </head>
   <body>
     <form_login_tutorial-app></form_login_tutorial-app>
+    <form-button><form-button>
   </body>
 </html>
