--- a/src/form_login_tutorial-app/form_button.html
+++ b/src/form_login_tutorial-app/form_button.html
@@ -2,6 +2,11 @@
 <link rel="import" href="./hidden-behaviour.html">
 
 <dom-module id="form-button">
+	<style>
+		button{
+			@apply(--form-button-theme)
+		}
+	</style>
 	<template>
 		<button>Hola</button>
 	</template>
